syntax = "proto3";
package balance;

service Balance {
  // example: ETHER
  rpc GetNativeBalance (GetNativeBalanceRequest) returns (GetNativeBalanceResponse);
  rpc GetHoprBalance (GetHoprBalanceRequest) returns (GetHoprBalanceResponse);
}

message GetNativeBalanceRequest {}

message GetNativeBalanceResponse {
  string amount = 1;
}

message GetHoprBalanceRequest {}

message GetHoprBalanceResponse {
  string amount = 1;
}
