syntax = "proto3";
package ping;

service Ping {
  rpc GetPing (PingRequest) returns (PingResponse);
}

message PingRequest {
  string peer_id = 1;
}

message PingResponse {
  // milliseconds
  int32 latency = 1;
}
